# LiteAuction

./: .dockerignore  .env.example  .env.full.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
alembic/: env.py
app/: __init__.py  config.py  healthcheck.py  main.py
app/db/: enums.py  (+2 more)
config/: defaults.toml
lite_auction_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
planning/: STATUS.md
scripts/: sprint_sync.py
tests/: test_adaptive_triage_policy_service.py  test_admin_list_preferences_service.py  test_admin_queue_preset_telemetry_service.py  test_admin_queue_presets_service.py  test_anti_fool_service.py  test_auction_caption_render.py  test_auction_create_wizard_service.py  test_auction_media_upgrade.py  test_auction_post_links.py  test_auction_service_resilience.py  test_bid_actions_alerts.py  test_bid_actions_outbid_notifications.py  test_bot_commands.py  test_bot_funnel_metrics_service.py  test_bot_profile_photo_service.py  test_bot_role_workflow.py  test_channel_dm_intake_service.py  test_chat_owner_guard_service.py  test_config_sources.py  test_create_auction_handlers.py  test_emoji_tools.py  test_error_boundary.py  test_keyboard_custom_emojis.py  test_main_dispatcher.py  test_message_draft_service.py  test_message_effects_service.py  test_moderation_botphoto_command.py  test_moderation_callback_scopes.py  test_moderation_checklist_service.py  test_moderation_funnelstats_command.py  (+31 more)
(+265 files in other folders)
