[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lite-auction-bot"
version = "0.1.0"
description = "MVP Telegram auction bot built with aiogram"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.23.0,<4.0.0",
  "SQLAlchemy>=2.0.38,<3.0.0",
  "asyncpg>=0.30.0,<1.0.0",
  "redis>=5.2.1,<6.0.0",
  "alembic>=1.14.1,<2.0.0",
  "pydantic-settings>=2.8.1,<3.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "fastapi>=0.116.0,<1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
  "python-multipart>=0.0.20,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.9.6,<1.0.0",
  "pytest>=8.3.4,<9.0.0",
  "pytest-asyncio>=0.25.3,<1.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"
